# Chip8-Emulator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  emu  gl.cpp
src/: app.cpp  app.h  chip8.cpp  chip8.h  glad.c  glfwm.cpp  main.cpp
